force-app/main/default/objects/Target_Values__c/Target_Values__c.object-meta.xml
<CustomObject>
    <label>Target Value</label>
    <nameField>
        <displayFormat>TV-{0000}</displayFormat>
        <label>Target Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>