force-app/main/default/objects/Target_Values__c/fields/Current_Month_Target__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Target__c</fullName>
    <label>Current Month Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>