force-app/main/default/objects/Target_Values__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Target Values</relationshipLabel>
    <relationshipName>Target_Values</relationshipName>
    <type>Lookup</type>
</CustomField>